--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,22 @@
-<% include ./partials/header %>
 
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
 
 <h1></h1>
-<!-- <a href="/events"><button type="button" name="button">View All Events</button> </a> -->
-
+<center><br><br><br><br><br>
+    <div class="jumbotron jumbotron-fluid">
+<div class="row">
+    <div class="col-md-6 m-auto">
+      <div class="card card-body text-center">
+        <h1><i class="fab fa-node-js fa-3x"></i></h1>
+        <p>Create an account or login</p>
+        <a href="/register" class="btn btn-primary btn-block mb-2"
+          >Register</a
+        >
+        <a href="/login" class="btn btn-success btn-block mb-2">Login</a>
+      </div>
+    </div>
+  </div>
+  </div>
+  </center>
 <% include ./partials/footer %>
